@@ -34,6 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Allow iCalendar events to be added to the calendar even if they are missing the required UID parameter (Bug #11669).
 * [mms] Fix displaying flag changes for messages in search mailboxes in dynamic view (Bug #11622).
 * [mms] Save sent-mail when composing in the smartmobile view (Bug #11670).
 * [mms] Don&apos;t try to save sent-mail to a non-existent sent-mail mailbox.
@@ -2845,6 +2846,7 @@
    <date>2012-11-07</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [mms] Allow iCalendar events to be added to the calendar even if they are missing the required UID parameter (Bug #11669).
 * [mms] Fix displaying flag changes for messages in search mailboxes in dynamic view (Bug #11622).
 * [mms] Save sent-mail when composing in the smartmobile view (Bug #11670).
 * [mms] Don&apos;t try to save sent-mail to a non-existent sent-mail mailbox.
